grammar.js
    source_file: ruleFactory => seq(
      optional(ruleFactory.package_declaration),
      repeat(ruleFactory._statement),
    ),

    package_declaration: ruleFactory => seq(
      'package',
      field('package_path', ruleFactory.dotted_identifier),
    ),

    dotted_identifier: ruleFactory => seq(
      ruleFactory._path_segment,
      repeat(seq('.', ruleFactory._path_segment)),
    ),

    function_declaration: ruleFactory => seq(
      optional(ruleFactory.access_modifier),
      repeat(ruleFactory.function_modifier),
      choice('function', 'property'),
      field('declared_name', ruleFactory.identifier),
      optional(ruleFactory.generic_parameter_list),
      ruleFactory.parameter_list,
      optional(seq('->', field('return_type', ruleFactory.type_specifier))),
      optional(seq('raises', ruleFactory._raises_type_list)),
      choice(ruleFactory.indented_body, ':', ';'),
    ),

    class_declaration: ruleFactory => seq(
      optional(ruleFactory.access_modifier),
      repeat(ruleFactory.class_modifier),
      'class',
      field('declared_name', ruleFactory.identifier),
      optional(ruleFactory.generic_parameter_list),
      optional(seq('extends', field('base_class_type', ruleFactory.type_specifier))),
      optional(seq('implements', ruleFactory._implements_type_list)),
      choice(ruleFactory.indented_body, ';'),
    ),

    struct_declaration: ruleFactory => seq(
      optional(ruleFactory.access_modifier),
      'struct',
      field('declared_name', ruleFactory.identifier),
      optional(ruleFactory.generic_parameter_list),
      choice(ruleFactory.indented_body, ';'),
    ),

    enum_declaration: ruleFactory => seq(
      optional(ruleFactory.access_modifier),
      'enum',
      field('declared_name', ruleFactory.identifier),
      optional(seq('backed', field('backing_type', ruleFactory.type_specifier))),
      ruleFactory.indented_body,
    ),

    enum_variant: ruleFactory => prec.right(seq(
      'unit',
      field('variant_name', ruleFactory.identifier),
      optional(field('variant_backing_value', ruleFactory.expression)),
    )),

    interface_declaration: ruleFactory => seq(
      optional(ruleFactory.access_modifier),
      'interface',
      field('declared_name', ruleFactory.identifier),
      optional(ruleFactory.generic_parameter_list),
      optional(seq('extends', ruleFactory._implements_type_list)),
      choice(ruleFactory.indented_body, ';'),
    ),

    extern_declaration: ruleFactory => seq(
      'extern',
      'function',
      field('declared_name', ruleFactory.identifier),
      ruleFactory.parameter_list,
      optional(seq('->', field('return_type', ruleFactory.type_specifier))),
      ';',
    ),

    constant_declaration: ruleFactory => prec.right(seq(
      optional(ruleFactory.access_modifier),
      'const',
      field('constant_type', ruleFactory.type_specifier),
      field('declared_name', ruleFactory.identifier),
      '=',
      field('constant_value', ruleFactory.expression),
    )),

    type_alias_declaration: ruleFactory => seq(
      optional(ruleFactory.access_modifier),
      'type',
      field('declared_name', ruleFactory.identifier),
      optional(ruleFactory.generic_parameter_list),
      '=',
      field('aliased_type', ruleFactory.type_specifier),
    ),

    parameter_list: ruleFactory => seq(
      '(',
      optional(seq(
        ruleFactory.parameter_declaration,
        repeat(seq(',', ruleFactory.parameter_declaration)),
        optional(','),
      )),
      ')',
    ),

    parameter_declaration: ruleFactory => choice(
      ruleFactory.self_parameter,
      '...',
      seq(
        optional(ruleFactory.access_modifier),
        field('parameter_type', ruleFactory.type_specifier),
        field('declared_name', ruleFactory.identifier),
        optional(choice(
          ruleFactory.variadic_array_suffix,
          ruleFactory.kwargs_brace_suffix,
        )),
        optional(seq('=', field('default_value', ruleFactory.expression))),
      ),
    ),

    self_parameter: _ruleFactory => 'self',

    argument_list: ruleFactory => seq(
      '(',
      optional(seq(
        ruleFactory._argument,
        repeat(seq(',', ruleFactory._argument)),
        optional(','),
      )),
      ')',
    ),

    generic_parameter_list: ruleFactory => seq(
      '<',
      ruleFactory.generic_parameter,
      repeat(seq(',', ruleFactory.generic_parameter)),
      '>',
    ),

    generic_parameter: ruleFactory => seq(
      field('type_parameter_name', ruleFactory.identifier),
      optional(seq(':', ruleFactory._generic_constraint_list)),
    ),

    generic_argument_list: ruleFactory => seq(
      '<',
      ruleFactory.type_specifier,
      repeat(seq(',', ruleFactory.type_specifier)),
      '>',
    ),

    // ==========================================
    // Types
    // ==========================================

    type_specifier: ruleFactory => choice(
      ruleFactory.nullable_type,
      ruleFactory.pointer_type,
      ruleFactory.generic_type_specifier,
      ruleFactory.callable_type,
      ruleFactory.meta_type,
      ruleFactory.identifier,
    ),

    pointer_type: ruleFactory => seq(
      '*',
      field('pointed_type', ruleFactory.type_specifier),
    ),

    generic_type_specifier: ruleFactory => seq(
      field('generic_base_name', ruleFactory.identifier),
      ruleFactory.generic_argument_list,
    ),

    if_statement: ruleFactory => seq(
      'if',
      field('condition', ruleFactory.expression),
      ruleFactory.indented_body,
      repeat(ruleFactory.elif_clause),
      optional(ruleFactory.else_clause),
    ),

    elif_clause: ruleFactory => seq(
      'elif',
      field('condition', ruleFactory.expression),
      ruleFactory.indented_body,
    ),

    else_clause: ruleFactory => seq(
      'else',
      ruleFactory.indented_body,
    ),

    while_statement: ruleFactory => seq(
      'while',
      field('condition', ruleFactory.expression),
      ruleFactory.indented_body,
    ),

    for_range_statement: ruleFactory => seq(
      'for',
      optional(field('iterator_type', ruleFactory.type_specifier)),
      field('iterator_name', ruleFactory.identifier),
      optional(seq(
        ',',
        optional(field('iterator_type2', ruleFactory.type_specifier)),
        field('iterator_name2', ruleFactory.identifier),
      )),
      'in',
      field('iterable', ruleFactory.expression),
      ruleFactory.indented_body,
    ),

    for_cstyle_statement: ruleFactory => seq(
      'for',
      field('initializer_type', ruleFactory.type_specifier),
      field('initializer_name', ruleFactory.identifier),
      '=',
      field('initializer_value', ruleFactory.expression),
      ';',
      field('loop_condition', ruleFactory.expression),
      ';',
      field('loop_update', ruleFactory._for_update_clause),
      ruleFactory.indented_body,
    ),

    try_statement: ruleFactory => seq(
      'try',
      ruleFactory.indented_body,
      repeat1(ruleFactory.except_clause),
      optional(ruleFactory.finally_clause),
    ),

    except_clause: ruleFactory => seq(
      'except',
      optional(choice(
        seq(
          field('exception_type', ruleFactory.type_specifier),
          optional(seq('as', field('exception_binding', ruleFactory.identifier))),
        ),
        seq('as', field('exception_binding', ruleFactory.identifier)),
      )),
      ruleFactory.indented_body,
    ),

    finally_clause: ruleFactory => seq(
      'finally',
      ruleFactory.indented_body,
    ),

    variable_declaration: ruleFactory => prec.dynamic(10, prec.right(seq(
      optional(ruleFactory.access_modifier),
      optional('mut'),
      field('variable_type', ruleFactory.type_specifier),
      field('declared_name', ruleFactory.identifier),
      optional(seq('=', field('initial_value', ruleFactory.expression))),
    ))),

    assignment_statement: ruleFactory => prec.right(seq(
      field('assignment_target', ruleFactory.expression),
      field('assignment_operator', ruleFactory._assignment_operator),
      field('assigned_value', ruleFactory.expression),
    )),

    return_statement: ruleFactory => prec.right(seq(
      'return',
      optional(field('return_value', ruleFactory.expression)),
    )),

    break_statement: _ruleFactory => 'break',
    continue_statement: _ruleFactory => 'continue',
    pass_statement: _ruleFactory => 'pass',

    expression_statement: ruleFactory => ruleFactory.expression,

    // ==========================================
    // Inline Assembly
    // ==========================================

    inline_assembly_statement: ruleFactory => choice(
      ruleFactory._inline_assembly_arch_block,
      ruleFactory._inline_assembly_single,
    ),

    assembly_output_clause: ruleFactory => seq(
      'output',
      '(',
      optional(seq(
        ruleFactory.assembly_operand,
        repeat(seq(',', ruleFactory.assembly_operand)),
      )),
      ')',
    ),

    assembly_input_clause: ruleFactory => seq(
      'input',
      '(',
      optional(seq(
        ruleFactory.assembly_operand,
        repeat(seq(',', ruleFactory.assembly_operand)),
      )),
      ')',
    ),

    assembly_clobber_clause: ruleFactory => seq(
      'clobber',
      '(',
      optional(seq(
        ruleFactory.string_literal,
        repeat(seq(',', ruleFactory.string_literal)),
      )),
      ')',
    ),

    assembly_operand: ruleFactory => seq(
      field('operand_constraint', ruleFactory.string_literal),
      field('operand_variable', ruleFactory.expression),
    ),

    // ==========================================
    // Expressions
    // ==========================================

    expression: ruleFactory => choice(
      ruleFactory.match_expression,
      ruleFactory.lambda_expression,
      ruleFactory.binary_expression,
      ruleFactory.unary_expression,
      ruleFactory.await_expression,
      ruleFactory.cast_expression,
      ruleFactory.primary_expression,
    ),

    binary_expression: ruleFactory => choice(
      prec.left(1, seq(field('left_operand', ruleFactory.expression), 'or', field('right_operand', ruleFactory.expression))),
      prec.left(2, seq(field('left_operand', ruleFactory.expression), 'and', field('right_operand', ruleFactory.expression))),
      prec.left(3, seq(field('left_operand', ruleFactory.expression), '|', field('right_operand', ruleFactory.expression))),
      prec.left(4, seq(field('left_operand', ruleFactory.expression), '^', field('right_operand', ruleFactory.expression))),
      prec.left(5, seq(field('left_operand', ruleFactory.expression), '&', field('right_operand', ruleFactory.expression))),
      prec.left(6, seq(field('left_operand', ruleFactory.expression), choice('==', '!='), field('right_operand', ruleFactory.expression))),
      prec.left(7, seq(field('left_operand', ruleFactory.expression), choice('<', '<=', '>', '>=', 'in', 'instanceof', 'is', 'subclassof'), field('right_operand', ruleFactory.expression))),
      prec.left(7, seq(field('left_operand', ruleFactory.expression), 'is', 'not', field('right_operand', ruleFactory.expression))),
      prec.left(7, seq(field('left_operand', ruleFactory.expression), 'not', 'in', field('right_operand', ruleFactory.expression))),
      prec.left(8, seq(field('left_operand', ruleFactory.expression), choice('<<', '>>'), field('right_operand', ruleFactory.expression))),
      prec.left(9, seq(field('left_operand', ruleFactory.expression), choice('+', '-'), field('right_operand', ruleFactory.expression))),
      prec.left(10, seq(field('left_operand', ruleFactory.expression), choice('*', '/', '%'), field('right_operand', ruleFactory.expression))),
      prec.right(11, seq(field('left_operand', ruleFactory.expression), '**', field('right_operand', ruleFactory.expression))),
      prec.left(7, seq(field('left_operand', ruleFactory.expression), choice('..', '...'), field('right_operand', ruleFactory.expression))),
    ),

    primary_expression: ruleFactory => choice(
      ruleFactory.identifier,
      ruleFactory.integer_literal,
      ruleFactory.float_literal,
      ruleFactory.string_literal,
      ruleFactory.character_literal,
      ruleFactory.boolean_literal,
      ruleFactory.none_literal,
      ruleFactory.self_expression,
      ruleFactory.parent_expression,
      ruleFactory.new_expression,
      ruleFactory.parenthesized_expression,
      ruleFactory.list_literal,
      ruleFactory.set_literal,
      ruleFactory.dict_literal,
      ruleFactory.comprehension_expression,
      ruleFactory.member_access_expression,
      ruleFactory.call_expression,
      ruleFactory.subscript_expression,
      ruleFactory.postfix_expression,
    ),

    self_expression: _ruleFactory => 'self',
    member_access_expression: ruleFactory => prec.left(16, seq(
      field('accessed_object', ruleFactory.expression),
      '.',
      field('accessed_member', ruleFactory.identifier),
    )),

    call_expression: ruleFactory => prec.left(16, seq(
      field('called_function', ruleFactory.expression),
      optional(ruleFactory.generic_argument_list),
      ruleFactory.argument_list,
    )),

    postfix_expression: ruleFactory => prec.left(16, seq(
      field('postfix_operand', ruleFactory.expression),
      choice('++', '--'),
    )),

    // ==========================================
    // Modifiers
    // ==========================================

    access_modifier: _ruleFactory => choice(
      'public',
      'private',
      'protect',
    ),

    // ==========================================
    // Block
    // ==========================================

    indented_body: ruleFactory => seq(
      ':',
      ruleFactory._indent,
      repeat1(choice(
        ruleFactory._statement,
        ruleFactory.docstring_comment,
        ruleFactory.enum_variant,
      )),
      ruleFactory._dedent,
    ),

    // ==========================================
    // Literals
    // ==========================================

    identifier: _ruleFactory => /[a-zA-Z_][a-zA-Z0-9_]*/,

    integer_literal: _ruleFactory => token(choice(
      /0[bB][01](_?[01])*/,
      /0[oO][0-7](_?[0-7])*/,
      /0[xX][0-9a-fA-F](_?[0-9a-fA-F])*/,
      /[0-9](_?[0-9])*/,
    )),

    string_literal: _ruleFactory => token(choice(
      seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),
    )),

    boolean_literal: _ruleFactory => choice('True', 'False'),
